unpackaged/main/default/objects/Plaid_Device_Risk_Analysis__c/Plaid_Device_Risk_Analysis__c.object-meta.xml
<CustomObject>
    <label>Plaid Device Risk Analysis</label>
    <nameField>
        <displayFormat>PDRA - {000000}</displayFormat>
        <label>Plaid Device Risk Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plaid Device Risk Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>