unpackaged/main/default/objects/Plaid_Device_Risk_Analysis__c/fields/Device_IP_Proxy_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_IP_Proxy_Type__c</fullName>
    <description>risk_check.devices.ip_proxy_type</description>
    <inlineHelpText>Type of network proxy used if detected</inlineHelpText>
    <label>Device IP Proxy Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>