unpackaged/main/default/objects/Plaid_Device_Risk_Analysis__c/fields/Device_IP_Spam_List_Count__c.field-meta.xml
<CustomField>
    <fullName>Device_IP_Spam_List_Count__c</fullName>
    <description>risk_check.devices.ip_spam_list_count</description>
    <inlineHelpText>Count of spam lists the IP address is associated with if known.</inlineHelpText>
    <label>Device IP Spam List Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>