unpackaged/main/default/objects/Plaid_Device_Risk_Analysis__c/fields/Device_IP_Timezone_Offset__c.field-meta.xml
<CustomField>
    <fullName>Device_IP_Timezone_Offset__c</fullName>
    <description>risk_check.devices.ip_timezone_offset</description>
    <inlineHelpText>UTC offset of the timezone associated with the IP address.</inlineHelpText>
    <label>Device IP Timezone Offset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>