unpackaged/main/default/objects/Plaid_Device_Risk_Analysis__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>Index to identify the related data from array in Plaid response</description>
    <label>Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>