unpackaged/main/default/objects/Plaid_Device_Risk_Analysis__c/fields/Plaid_Verification__c.field-meta.xml
<CustomField>
    <fullName>Plaid_Verification__c</fullName>
    <label>Plaid Verification</label>
    <referenceTo>Plaid_Verification__c</referenceTo>
    <relationshipLabel>Plaid Device Risk Analysis</relationshipLabel>
    <relationshipName>Plaid_Device_Risk_Analysis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>